--- a/LazyStackAuthTestsLambdaApi/LazyStackAuthTestsLambdaApi.csproj
+++ b/LazyStackAuthTestsLambdaApi/LazyStackAuthTestsLambdaApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -11,7 +11,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.1" />
-    <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="6.0.3" />
+    <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="7.0.0" />
     <ProjectReference Include="..\LazyStackAuthTestsController\LazyStackAuthTestsController.csproj" />
   </ItemGroup>
 </Project>
