--- a/LazyStackDynamoDBRepo/LazyStackDynamoDBRepo.csproj
+++ b/LazyStackDynamoDBRepo/LazyStackDynamoDBRepo.csproj
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.0.76" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
@@ -28,14 +28,13 @@
   </ItemGroup>
 
   <!-- Note: The signing step will not execute if the CertPassword.csproj file doesn't exist and contain a non-empty SIGN_CERT_HASH string -->
-  <Import Project="..\..\LazyStackCertificate\CertPassword.csproj" 
-          Condition="'$(Configuration)' == 'Release' AND Exists('..\..\LazyStackCertificate')" />
+  <Import Project="..\..\..\LazyStackCertificate\CertPassword.csproj" Condition="'$(Configuration)' == 'Release' AND Exists('..\..\..\LazyStackCertificate')" />
 
-  <PropertyGroup Condition="'$(Configuration)' == 'Release' AND Exists('..\..\LazyStackCertificate') AND '$(SIGN_CERT_HASH)' != ''">
-    <NugetSignCommand>$(MSBuildProjectDirectory)\..\..\LazyStackCertificate\nuget sign -CertificateFingerprint $(SIGN_CERT_HASH) -Timestamper http://timestamp.digicert.com</NugetSignCommand>
+  <PropertyGroup Condition="'$(Configuration)' == 'Release' AND Exists('..\..\..\LazyStackCertificate') AND '$(SIGN_CERT_HASH)' != ''">
+    <NugetSignCommand>$(MSBuildProjectDirectory)\..\..\..\LazyStackCertificate\nuget sign -CertificateFingerprint $(SIGN_CERT_HASH) -Timestamper http://timestamp.digicert.com</NugetSignCommand>
   </PropertyGroup>
 
-  <Target Name="SignPackage" AfterTargets="Pack" Condition="'$(Configuration)' == 'Release' AND Exists('..\..\LazyStackCertificate') AND '$(SIGN_CERT_HASH)' != ''">
+  <Target Name="SignPackage" AfterTargets="Pack" Condition="'$(Configuration)' == 'Release' AND Exists('..\..\..\LazyStackCertificate') AND '$(SIGN_CERT_HASH)' != ''">
     <Message Importance="High" Text="Signing Package" />
     <Message Importance="High" Text="PackageVersion $(Version)" />
     <Exec Command="$(NugetSignCommand) $(MSBuildProjectDirectory)\bin\Release\$(MSBuildProjectName).$(PackageVersion).nupkg" />
