--- a/LazyStackAuth/LazyStackAuth.csproj
+++ b/LazyStackAuth/LazyStackAuth.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <UserSecretsId>76925471-91ff-459d-8f16-a8b8c691549b</UserSecretsId>
     <Copyright>Copyright (c) 2021, Insight Sciences Corporation. All rights reserved.</Copyright>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
@@ -13,7 +13,7 @@
     <Company>Insight Sciences Corporation</Company>
     <Authors>Tim May, Thomas May</Authors>
     <SignAssembly>false</SignAssembly>
-    <Version>1.5.3</Version>
+    <Version>2.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -30,13 +30,13 @@
   
   <ItemGroup>
     <PackageReference Include="Amazon.Extensions.CognitoAuthentication" Version="2.2.2" />
-    <PackageReference Include="AwsSignatureVersion4" Version="2.1.1" />
-    <PackageReference Include="MailKit" Version="2.15.0" />
+    <PackageReference Include="AwsSignatureVersion4" Version="3.0.1" />
+    <PackageReference Include="MailKit" Version="3.2.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageReference Include="JsonSubTypes" Version="1.8.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.14.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.17.0" />
   </ItemGroup>
   
   <!-- Note: The signing step will not execute if the CertPassword.csproj file doesn't exist and contain a non-empty SIGN_CERT_HASH string -->
