--- a/LazyStackAuthTests/LazyStackAuthTests.csproj
+++ b/LazyStackAuthTests/LazyStackAuthTests.csproj
@@ -7,7 +7,7 @@
 
     <UserSecretsId>65c9d090-81bb-444b-b68f-62baa382a22e</UserSecretsId>
 
-    <Copyright>Copyright (c) 2021, Insight Sciences Corporation. All rights reserved.</Copyright>
+    <Copyright>Copyright (c) 2021,2022 Insight Sciences Corporation. All rights reserved.</Copyright>
 
     <Authors>Tim May, Thomas May</Authors>
 
