--- a/LazyStackDynamoDBRepoTests/LazyStackDynamoDBRepoTests.csproj
+++ b/LazyStackDynamoDBRepoTests/LazyStackDynamoDBRepoTests.csproj
@@ -5,7 +5,7 @@
 
     <IsPackable>false</IsPackable>
 
-    <Copyright>Copyright (c) 2021, Insight Sciences Corporation. All rights reserved.</Copyright>
+    <Copyright>Copyright (c) 2021,2022 Insight Sciences Corporation. All rights reserved.</Copyright>
 
     <Authors>Tim May, Thomas May</Authors>
 
