--- a/LazyStackAuth/LazyStackAuth.csproj
+++ b/LazyStackAuth/LazyStackAuth.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <UserSecretsId>76925471-91ff-459d-8f16-a8b8c691549b</UserSecretsId>
-    <Copyright>Copyright (c) 2021, Insight Sciences Corporation. All rights reserved.</Copyright>
+    <Copyright>Copyright (c) 2021,2022 Insight Sciences Corporation. All rights reserved.</Copyright>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <PackageProjectUrl>https://lazystack.io</PackageProjectUrl>
     <RepositoryUrl>https://github.com/InSciCo/LazyStack</RepositoryUrl>
@@ -13,7 +13,7 @@
     <Company>Insight Sciences Corporation</Company>
     <Authors>Tim May, Thomas May</Authors>
     <SignAssembly>false</SignAssembly>
-    <Version>2.1.0</Version>
+    <Version>3.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
