--- a/LazyStackAwsSettings/LazyStackAwsSettings.csproj
+++ b/LazyStackAwsSettings/LazyStackAwsSettings.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Copyright>Copyright (c) 2021, Insight Sciences Corporation. All rights reserved.</Copyright>
+    <Copyright>Copyright (c) 2021,2022 Insight Sciences Corporation. All rights reserved.</Copyright>
     <Description>Utility library - used by LazyStackAuth and LazyStackGetAwsSettings projects</Description>
     <Authors>Tim May, Thomas May</Authors>
     <Company>Insight Sciences Corporation</Company>
