--- a/LazyStackAuth/LazyStackAuth.csproj
+++ b/LazyStackAuth/LazyStackAuth.csproj
@@ -42,16 +42,15 @@
   </ItemGroup>
   
   <!-- Note: The signing step will not execute if the CertPassword.csproj file doesn't exist and contain a non-empty SIGN_CERT_HASH string -->
-  <Import Project="..\..\..\LazyStackCertificate\CertPassword.csproj" Condition="'$(Configuration)' == 'Release' AND Exists('..\..\..\LazyStackCertificate')" />
+  <Import Project="..\..\LazyStackCertificate\CertPassword.csproj" Condition="'$(Configuration)' == 'Release' AND Exists('..\..\LazyStackCertificate')" />
 
-  <PropertyGroup Condition="'$(Configuration)' == 'Release' AND Exists('..\..\..\LazyStackCertificate') AND '$(SIGN_CERT_HASH)' != ''">
-    <NugetSignCommand>$(MSBuildProjectDirectory)\..\..\..\LazyStackCertificate\nuget sign -CertificateFingerprint $(SIGN_CERT_HASH) -Timestamper http://timestamp.digicert.com</NugetSignCommand>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)' == 'Release' AND Exists('..\..\LazyStackCertificate') AND '$(SIGN_CERT_HASH)' != ''">
+		<NugetSignCommand>dotnet nuget sign --certificate-fingerprint $(SIGN_CERT_HASH) --timestamper http://timestamp.digicert.com</NugetSignCommand>
+	</PropertyGroup>
 
-  
-  <Target Name="SignPackage" AfterTargets="Pack" Condition="'$(Configuration)' == 'Release' AND Exists('..\..\..\LazyStackCertificate') AND '$(SIGN_CERT_HASH)' != ''">
-    <Message Importance="High" Text="Signing Package" />
-    <Message Importance="High" Text="PackageVersion $(Version)" />
-    <Exec Command="$(NugetSignCommand) $(MSBuildProjectDirectory)\bin\Release\$(MSBuildProjectName).$(PackageVersion).nupkg" />
-  </Target>
+	<Target Name="SignPackage" AfterTargets="Pack" Condition="'$(Configuration)' == 'Release' AND Exists('..\..\LazyStackCertificate') AND '$(SIGN_CERT_HASH)' != ''">
+		<Message Importance="High" Text="Signing Package" />
+		<Message Importance="High" Text="PackageVersion $(Version)" />
+		<Exec Command="$(NugetSignCommand) $(MSBuildProjectDirectory)\bin\Release\$(MSBuildProjectName).$(PackageVersion).nupkg" />
+	</Target>
 </Project>
