--- a/LazyStack.ViewModels/LazyStack.ViewModels.csproj
+++ b/LazyStack.ViewModels/LazyStack.ViewModels.csproj
@@ -18,9 +18,14 @@
 
   <ItemGroup>
 	  <PackageReference Include="DynamicData" Version="7.9.7" />
+	  <PackageReference Include="FluentValidation" Version="11.2.2" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-    <PackageReference Include="ReactiveUI" Version="18.3.1" />
+	  <PackageReference Include="DeepCloner" Version="0.10.4" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.7" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="6.0.7" />
+
+	  <PackageReference Include="ReactiveUI" Version="18.3.1" />
     <PackageReference Include="ReactiveUI.Fody" Version="18.3.1" />
   </ItemGroup>
 
