--- a/LazyStack.Components/LazyStack.Components.csproj
+++ b/LazyStack.Components/LazyStack.Components.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
@@ -37,7 +37,7 @@
 	  <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.1.2" />
 
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
-	  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.10" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.0-rc.2.22476.2" />
 	  <PackageReference Include="ReactiveUI.Blazor" Version="18.3.1" />
   </ItemGroup>
 
