--- a/LazyStack.ViewModels/LazyStack.ViewModels.csproj
+++ b/LazyStack.ViewModels/LazyStack.ViewModels.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -19,8 +19,8 @@
   <ItemGroup>
 	  <PackageReference Include="DynamicData" Version="7.12.1" />
 	  <PackageReference Include="FluentValidation" Version="11.2.2" />
-	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
-	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0-rc.2.22472.3" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0-rc.2.22472.3" />
 	  <PackageReference Include="DeepCloner" Version="0.10.4" />
 	  <PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.10" />
 	  <PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="6.0.10" />
