--- a/LazyStack.Components/LazyStack.Components.csproj
+++ b/LazyStack.Components/LazyStack.Components.csproj
@@ -30,14 +30,14 @@
 
   <ItemGroup>
 
-	  <PackageReference Include="Blazorise.Bootstrap5" Version="1.1.2" />
+	  <PackageReference Include="Blazorise.Bootstrap5" Version="1.1.3.1" />
 
-	  <PackageReference Include="Blazorise.Components" Version="1.1.2" />
+	  <PackageReference Include="Blazorise.Components" Version="1.1.3.1" />
 
-	  <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.1.2" />
+	  <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.1.3.1" />
 
-	  <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
-	  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.0-rc.2.22476.2" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.0" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.0" />
 	  <PackageReference Include="ReactiveUI.Blazor" Version="18.3.1" />
   </ItemGroup>
 
