--- a/LazyStack.ViewModels/LazyStack.ViewModels.csproj
+++ b/LazyStack.ViewModels/LazyStack.ViewModels.csproj
@@ -17,7 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+	  <PackageReference Include="DeepCloner" Version="0.10.4" />
 	  <PackageReference Include="DynamicData" Version="7.12.1" />
+	  <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="7.0.2" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
     <PackageReference Include="ReactiveUI" Version="18.3.1" />
