--- a/LazyStack.ViewModels/LazyStack.ViewModels.csproj
+++ b/LazyStack.ViewModels/LazyStack.ViewModels.csproj
@@ -21,7 +21,6 @@
 	  <PackageReference Include="FluentValidation" Version="11.4.0" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-	  <PackageReference Include="DeepCloner" Version="0.10.4" />
 	  <PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.1" />
 	  <PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="7.0.1" />
 
@@ -30,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\BC.Clients\DeepCloner\DeepCloner.csproj" />
     <ProjectReference Include="..\..\LazyStack\LazyStackAuthV2\LazyStackAuthV2.csproj" />
     <ProjectReference Include="..\LazyStack.Utils\LazyStack.Utils.csproj" />
   </ItemGroup>
