--- a/LazyStackAuthJs/LazyStackAuthJs.csproj
+++ b/LazyStackAuthJs/LazyStackAuthJs.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LazyStackAuthV2\LazyStackAuthV2.csproj" />
+    <ProjectReference Include="..\LazyStackAuth\LazyStackAuth.csproj" />
   </ItemGroup>
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 		<Exec Condition="$(Configuration) == 'Debug'" Command="cd JS &amp;&amp; npm run snowpack-build" />
