--- a/LazyStack.Components/LazyStack.Components.csproj
+++ b/LazyStack.Components/LazyStack.Components.csproj
@@ -29,19 +29,14 @@
   </ItemGroup>
 
   <ItemGroup>
-
-	  <PackageReference Include="Blazorise.Bootstrap5" Version="1.2.2" />
-
-	  <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.2.2" />
-
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
 	  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.4" />
-	  <PackageReference Include="ReactiveUI.Blazor" Version="18.4.26" />
+	  <PackageReference Include="ReactiveUI.Blazor" Version="19.2.1" />
+	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LazyStack.ViewModels\LazyStack.ViewModels.csproj" />
-    <ProjectReference Include="..\LazyStack.Utils\LazyStack.Utils.csproj" />
   </ItemGroup>
 
   <ItemGroup>
