--- a/LazyStack.ViewModels/LazyStack.ViewModels.csproj
+++ b/LazyStack.ViewModels/LazyStack.ViewModels.csproj
@@ -1,37 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Config\Messages.json" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Remove="Config\Messages.json" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <EmbeddedResource Include="Config\Messages.json">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </EmbeddedResource>
-  </ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Include="Config\Messages.json">
+			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
+		</EmbeddedResource>
+	</ItemGroup>
 
-  <ItemGroup>
-	  <PackageReference Include="DeepCloner" Version="0.10.4" />
-	  <PackageReference Include="DynamicData" Version="7.13.1" />
-	  <PackageReference Include="FluentValidation" Version="11.5.1" />
-	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
-	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-	  <PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.4" />
-	  <PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="7.0.4" />
+	<ItemGroup>
+		<PackageReference Include="DeepCloner" Version="0.10.4" />
+		<PackageReference Include="DynamicData" Version="7.14.2" />
+		<PackageReference Include="FluentValidation" Version="11.5.2" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="7.0.5" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
 
-	  <PackageReference Include="ReactiveUI" Version="18.4.26" />
-    <PackageReference Include="ReactiveUI.Fody" Version="18.4.26" />
-  </ItemGroup>
+		<PackageReference Include="ReactiveUI" Version="19.2.1" />
+		<PackageReference Include="ReactiveUI.Fody" Version="19.2.1" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\LazyStackAuth\LazyStackAuth.csproj" />
-    <ProjectReference Include="..\LazyStack.Utils\LazyStack.Utils.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\LazyStackAuth\LazyStackAuth.csproj" />
+	</ItemGroup>
 
 </Project>
