--- a/LazyStackAuth/LazyStackAuth.csproj
+++ b/LazyStackAuth/LazyStackAuth.csproj
@@ -14,6 +14,7 @@
 		<Authors>Tim May, Thomas May</Authors>
 		<SignAssembly>false</SignAssembly>
 		<Version>3.0.0</Version>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -41,11 +42,17 @@
 		<PackageReference Include="JsonSubTypes" Version="2.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.31.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\LazyStack.Utils\LazyStack.Utils.csproj" />
+	  <ProjectReference Include="..\LazyStackAwsSettings\LazyStackAwsSettings.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Base\" />
 	</ItemGroup>
 
 	<!-- Note: The signing step will not execute if the CertPassword.csproj file doesn't exist and contain a non-empty SIGN_CERT_HASH string -->
