--- a/LazyStackAwsSettings/LazyStackAwsSettings.csproj
+++ b/LazyStackAwsSettings/LazyStackAwsSettings.csproj
@@ -13,9 +13,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.CloudFormation" Version="3.7.107.4" />
+    <PackageReference Include="AWSSDK.CloudFormation" Version="3.7.108.1" />
+    <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.103.21" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="YamlDotNet" Version="9.1.4" />
+    <PackageReference Include="YamlDotNet" Version="13.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LazyStackBase\LazyStackBase.csproj" />
   </ItemGroup>
 
   <Import Project="..\LazyStackAwsSettingsSharedCode\LazyStackAwsSettingsSharedCode.projitems" Label="Shared" />
