--- a/LazyStackNotificationsSharedCode/NotificationsSvc.yaml
+++ b/LazyStackNotificationsSharedCode/NotificationsSvc.yaml
@@ -31,6 +31,7 @@ paths:
     post:
       summary: Create a notification record for testing 
       operationId: addNotificaiton
+      x-lz-gencall: lzNotificationRepo.CreateAsync(callerInfo,body)
       requestBody:
         content:
           application/json:
@@ -47,6 +48,7 @@ paths:
   '/lzSubscription/{id}':
     get:
       operationId: getLzSubscriptionById
+      x-lz-gencall: lzSubscriptionRepo.ReadAsync(callerInfo,sessionId)   
       description: GetLzSubscription record 
       parameters:
       - name: sessionId
@@ -87,6 +89,8 @@ components:
   schemas:
     LzNotification: 
       type: object
+      x-lz-hasrepo: true
+      x-lz-genschemaclass: false
       properties:
         id:
           type: string 
@@ -125,7 +129,10 @@ components:
         - payloadAction
     LzNotificationsPage:
       type: object
+      x-lz-genschemaclass: false
       properties:
+        id:
+          type: string
         LzNotifications:
           type: array
           items:
@@ -134,6 +141,8 @@ components:
           type: boolean
     LzSubscription:
       type: object 
+      x-lz-hasrepo: true
+      x-lz-genschemaclass: false
       properties:
         id:
           description: subscriptionId
