Updated Repo Classes

--- a/LazyStack.ViewModels/LazyStack.ViewModels.csproj
+++ b/LazyStack.ViewModels/LazyStack.ViewModels.csproj
@@ -33,4 +33,8 @@
 		<ProjectReference Include="..\LazyStackAuth\LazyStackAuth.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="ClientConfig\" />
+	</ItemGroup>
+
 </Project>
